--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -4,3 +4,4 @@ $text_parah_color: #383838;
 ;
 
 $section_spacing: 75px 0;
+$default_gradient: linear-gradient(90deg, rgba(255, 0, 0, 0.63) 0.87%, rgba(27, 83, 195, 0.92) 100%);
