--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -1,8 +1,8 @@
 .app-mainframe{
     width: 100%;
-    height: 100vh;
+    height: 250px;
     overflow: hidden;
-    background-color: black;
+    background: $default_gradient;
     position: relative;
     .brand-title{
         width: fit-content;
@@ -14,13 +14,27 @@
         font-size: 24px;
         color: $primary_color;
     }
+
+    .container{
+        align-items: end;
+        justify-content: center;
+        position: relative;
+        height: 100%;
+        .mainframe-title{
+            font-family: 'Roboto';
+            font-weight: 700;
+            font-size: 48px;
+            color: white;
+            margin-bottom: 3rem;
+        }
+    }
+
 }
 
 // HOME
 .Home {
     .app-mainframe{
-        // background-image: url('../../images/bg-mainframe.jpg');
-
+        height: 100vh;
         .carousel {
             .carousel-inner{
                 .carousel-item{
