--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,4 +18,6 @@
         './components/mainframe';
 
 // PAGES
-@import './page/home';
+@import './page/home', 
+        './page/list',
+        './page/details';
