--- a/assets/scss/page/_home.scss
+++ b/assets/scss/page/_home.scss
@@ -106,5 +106,11 @@
                 background-color: #383838;
             }
         }
+
+        .section-clients{
+            .slick-slide img{
+                margin: 0 auto;
+            }
+        }
     }
 }
