--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~slick-carousel/slick/slick.css"; 
 @import "~slick-carousel/slick/slick-theme.css";
+@import '~animate.css';
 
 // UTILS
 @import './utils/variables',
@@ -9,15 +10,26 @@
 // CORE
 @import './core/normalize';
 
+// FONTS
+@import './fonts/icons';
+
 // COMPONENTS
 @import './components/button',
         './components/header',
         './components/title',
         './components/footer',
         './components/section',
+        './components/whatsApp',
         './components/mainframe';
+
+
+// MODALS
+@import './modal/welcome';
 
 // PAGES
 @import './page/home', 
+        './page/faq',
         './page/list',
+        './page/apply',
+        './page/contact',
         './page/details';
