--- a/assets/scss/page/_list.scss
+++ b/assets/scss/page/_list.scss
@@ -4,6 +4,16 @@
         margin-bottom: 30px;
         overflow: hidden;
         cursor: pointer;
+        &::before{
+            content: " ";
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            background-color: rgba(black, 0.6);
+        }
         .figure-img{
             margin: 0;
             transition: all ease 0.4s;
@@ -18,21 +28,21 @@
             padding: 0.5rem;
             width: 85%;
             text-align: center;
-            font-size: 18px;
+            font-size: 22px;
             color: white;
             height: fit-content;
             border-radius: 2px;
             transition: all ease 0.4s;
-            background-color: rgba($secondary_color, 0.8);
+            z-index: 2;
         }
         &:hover{
             .figure-img{
-                transform: scale(1.04);
+                transform: scale(1.1);
             }
-            .figure-caption{
-                background-color: white;
-                color: $secondary_color;
-            }
+            // .figure-caption{
+            //     background-color: white;
+            //     color: $secondary_color;
+            // }
         }
     }
 }
