--- a/assets/scss/page/_contact.scss
+++ b/assets/scss/page/_contact.scss
@@ -27,6 +27,8 @@
                 > i {
                     font-size: 28px;
                     margin-right: 1rem;
+                }
+                &:hover{
                     color: $secondary_color;
                 }
             }
