--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -205,3 +205,13 @@
         background-size: cover;
     } 
 }
+
+// PLACES TO VISIT
+.PlaceToVisit{
+    .app-mainframe{
+        background: url('../../images/bg_places.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    } 
+}
