--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,4 +32,5 @@
         './page/list',
         './page/apply',
         './page/contact',
-        './page/details';
+        './page/details',
+        './page/place_to_visit';
