--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -207,6 +207,7 @@
 }
 
 // PLACES TO VISIT
+.place-to-visit,
 .page-place-visit{
     .app-mainframe{
         background: url('../../images/bg_places.jpg');
