--- a/assets/scss/page/_contact.scss
+++ b/assets/scss/page/_contact.scss
@@ -1,7 +1,7 @@
-.section-conatct-one{
+.page-contact{
     width: 100%;
     margin: 0 auto;
-    max-width: 950px;
+    // max-width: 950px;
     form{
         .btn{
             display: block;
