--- a/assets/scss/components/_banner.scss
+++ b/assets/scss/components/_banner.scss
@@ -1,6 +1,6 @@
 .app-banner{
     width: 100%;
-    background: #19c0d6;
+    background: #ff5722;
     color: white;
     font-size: 14px;
     text-align: center;
