--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -2,7 +2,9 @@ $primary_color: #1B53C3;
 $secondary_color: #FF0000;
 $text_title_color: #4e4e4e;
 $text_parah_color: #383838;
-;
+$text_parah_color_1: #6c6c6c;
+$font-primary: 'Poppins', Arial, sans-serif;
+$font-secondary: 'Ibarra Real Nova', Arial, sans-serif;
 
 $section_spacing: 75px 0;
 $default_gradient: linear-gradient(90deg, rgba(255, 0, 0, 0.63) 0.87%, rgba(27, 83, 195, 0.92) 100%);
