--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -10,6 +10,7 @@
             text-align: center;
             font-size: 12px;
             color: white;
+            margin: 0;
         }
     }
 }
