--- a/assets/scss/core/_normalize.scss
+++ b/assets/scss/core/_normalize.scss
@@ -24,9 +24,8 @@ html {
 
 body {
   margin: 0;
-  font-size: 16px;
-  line-height: 26px;
   color: $text_parah_color;
+  @include font-family($font-primary, 16px, $text_title_color, 400, 20px);
 }
 
 /**
@@ -45,6 +44,10 @@ main {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+}
+
+h1, h2, h3, h4, h5, h6{
+  font-family: $font-secondary;
 }
 
 /* Grouping content
@@ -383,6 +386,7 @@ template {
 
 p {
   margin: 0;
+  color: $text_parah_color_1;
 }
 
 textarea {
