--- a/assets/scss/page/_contact.scss
+++ b/assets/scss/page/_contact.scss
@@ -1,9 +1,10 @@
-.page-contact{
+.page-contact {
     width: 100%;
     margin: 0 auto;
+
     // max-width: 950px;
-    form{
-        .btn{
+    form {
+        .btn {
             display: block;
             width: 100%;
             margin-top: 1rem;
@@ -12,39 +13,112 @@
         }
     }
 
-    h2{
-        margin-bottom: 2rem;
-    }
-    .contact-content{
-        .list{
-            a{
-                width: fit-content;
-                display: flex;
-                align-items: center;
-                color: #3e3e3e;
-                font-size: 24px;
-                text-decoration: none;
-                > i {
-                    font-size: 28px;
-                    margin-right: 1rem;
-                }
-                &:hover{
-                    color: $secondary_color;
-                }
-            }
-            h4{
-                font-size: 18px;
-                color: #3e3e3e;
-                margin-bottom: 0.5rem;
-            }
-            h6{
-                color: #797979;
-                margin: 1rem 0 !important;
-            }
-            p{
-                color: #a9a9a9;
-            }
+    .content-box {
+        padding-bottom: 2rem;
+
+        h4 {
+            @include font-family($font-secondary, 26px, $text_parah_color, 600, 30px);
             margin-bottom: 2rem;
         }
+
+        .list-group {
+            border: 0;
+            border-radius: 0;
+
+            .list-group-item {
+                border: 0;
+                padding: 12px 0;
+                display: flex;
+                align-items: center;
+                color: $text_parah_color_1;
+
+                &::before {
+                    content: "\6d";
+                    margin-right: 12px;
+                    color: $primary_color;
+                    font-family: "barreleye" !important;
+                }
+            }
+        }
+
+        &.details {
+            border-left: 1px solid rgba($text_parah_color_1, 0.2);
+
+            .account {
+                padding-bottom: 1rem;
+                margin-bottom: 1rem;
+                padding-left: 2rem;
+                border-bottom: 1px solid rgba($text_parah_color_1, 0.2);
+
+                .list-group {
+                    .list-group-item {
+                        &::before {
+                            display: none;
+                        }
+
+                        color: rgba($text_parah_color_1, 0.7);
+
+                        b {
+                            flex: none;
+                            width: 137px;
+                            font-weight: 500;
+                            position: relative;
+                            margin-right: 12px;
+                            color: rgba($text_parah_color_1, 1);
+
+                            &::after {
+                                content: ":";
+                                position: absolute;
+                                right: 0;
+                                top: 0;
+                                bottom: 0;
+                                margin: auto 0;
+                            }
+                        }
+                    }
+                }
+            }
+
+            h4 {
+                margin-bottom: 1rem;
+            }
+
+            h5 {
+                font-family: $font-primary;
+                font-size: 18px;
+            }
+
+            .list {
+                padding-left: 2rem;
+
+                h4 {
+                    margin-bottom: 2rem;
+                }
+
+                address {
+                    margin-bottom: 2rem;
+
+                    p {
+                        @include font-family($font-primary, 16px, $text_parah_color_1, 400, 30px);
+                    }
+                }
+
+                .btn.btn-primary {
+                    height: 45px;
+                    font-size: 16px;
+
+                    >i {
+                        margin-right: 12px;
+                    }
+                }
+            }
+        }
     }
+
+    .mail_to{
+        padding-top: 2rem;
+        text-align: center;
+        border-top: 1px solid rgba($text_parah_color_1, 0.2);
+    }
+
 }
