--- a/assets/scss/page/_corse_details.scss
+++ b/assets/scss/page/_corse_details.scss
@@ -16,74 +16,41 @@
             }
         }
 
-        &.block-1{
-            .details{
+        &.block-1 {
+            .details {
                 margin-bottom: 2rem;
             }
         }
 
         &.block-2 {
             margin: 0;
-
+            .link{
+                display: block;
+                text-decoration: none;
+            }
             .box {
                 width: 100%;
-                height: 100%;
+                height: 210px;
+                padding: 2rem 1rem;
+                border-radius: 4px;
 
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                font-weight: 700;
+                color: white;
                 &.box-1 {
-                    .figure {
-                        position: relative;
-                        margin: 0;
+                    background-color: #FF0000;
 
-                        img {
-                            margin: 0;
-                        }
-
-                        &::before {
-                            content: "";
-                            width: 100%;
-                            height: 100%;
-                            z-index: 1;
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                            background-color: rgba(black, 0.5);
-                        }
-
-                        .figure-caption {
-                            position: absolute;
-                            top: 0;
-                            left: 0;
-                            top: 0;
-                            right: 0;
-                            bottom: 0;
-                            z-index: 2;
-                            margin: auto;
-                            height: fit-content;
-                            width: fit-content;
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            font-size: 18px;
-                            font-weight: 700;
-                            color: white;
-
-                            i {
-                                font-size: 56px;
-                                color: $secondary_color;
-                            }
-                        }
+                    i {
+                        font-size: 95px
                     }
                 }
 
                 &.box-2 {
                     background-color: #DC4C4C;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    color: white;
-                    font-weight: 700;
-                    color: white;
 
                     i {
                         font-size: 90px
@@ -91,7 +58,6 @@
                 }
 
                 &.box-3 {
-                    @extend .box-2;
                     background-color: #185ABD;
 
                     i {
