--- a/assets/scss/utils/_mixins.scss
+++ b/assets/scss/utils/_mixins.scss
@@ -1,3 +1,13 @@
+// FONT FAMILY
+@mixin font-family($font, $size, $color, $font-weight, $line-height) {
+    font-family: $font;
+    font-size: $size;
+    color: $color;
+    font-weight: $font-weight;
+    line-height: $line-height;
+  }
+
+
 @mixin mainframeBg {
     background: linear-gradient(90deg, rgba(114, 42, 247, 0.87) 0%, rgba(251, 5, 226, 0.46) 98.4%);
 }
