--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -135,7 +135,7 @@
 }
 
 // CONATCT
-.page-conatct{
+.page-contact{
     .app-mainframe{
         background: url('../../images/bg_contact.jpg');
         background-repeat: no-repeat;
