--- a/assets/scss/core/_normalize.scss
+++ b/assets/scss/core/_normalize.scss
@@ -25,6 +25,7 @@ html {
 body {
   margin: 0;
   color: $text_parah_color;
+  overflow-x: hidden !important;
   @include font-family($font-primary, 16px, $text_title_color, 400, 20px);
 }
 
@@ -386,6 +387,7 @@ template {
 
 p {
   margin: 0;
+  line-height: 26px;
   color: $text_parah_color_1;
 }
 
