--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -154,3 +154,13 @@
         background-size: cover;
     } 
 }
+
+// ABOUT
+.page-about{
+    .app-mainframe{
+        background: url('../../images/bg_about.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    } 
+}
