--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -164,3 +164,23 @@
         background-size: cover;
     } 
 }
+
+// IT
+.it{
+    .app-mainframe{
+        background: url('../../images/bg_it.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    } 
+}
+
+// OTHER
+.other{
+    .app-mainframe{
+        background: url('../../images/bg_other.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    } 
+}
