--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,4 +39,5 @@
         './page/contact',
         './page/job_details',
         './page/corse_details',
-        './page/place_to_visit';
+        './page/place_to_visit',
+        './page/career_guidance';
