--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -17,50 +17,72 @@
             }
         }
 
-        .menu-wrap {
-            .navbar-nav {
-                .nav-link {
-                    color: white;
-                    font-size: 14px;
-                    padding: 0.5rem 1rem;
-                    display: flex;
-                    align-items: center;
-                    &:hover{
-                        opacity: 0.5;
-                    }
-                }
+        .navbar-toggler {
+            border: 0;
+            outline: none;
+            box-shadow: none;
+            padding: 5px 10px;
+            background-color: white;
+        }
 
-                &.nav-social{
-                    align-items: center;
+        .navbar{
+            @include media-breakpoint-down(lg) {
+                display: none;
+            }
+            .menu-wrap {
+                .navbar-nav {
                     .nav-link {
-                        padding: 0 1rem;
-                        i {
-                            display: inline-block;
-                            &.icon-facebook{
-
-                            }
-                            &.icon-linkedin{
-                                font-size: 22px;
-                            }
-                            &.icon-youtube{
-                                font-size: 16px;
-                            }
+                        color: white;
+                        font-size: 14px;
+                        padding: 0.5rem 1rem;
+                        display: flex;
+                        align-items: center;
+    
+                        &:hover {
+                            opacity: 0.5;
                         }
                     }
-                }
-
-                .dropdown {
-                    .dropdown-menu {
+    
+                    &.nav-social {
+                        align-items: center;
+    
                         .nav-link {
-                            color: #3e3e3e;
-                            font-size: 14px;
-                            opacity: 1 !important;
-                            > span{
-                                padding: 0;
-                                background: transparent !important;
+                            padding: 0 1rem;
+    
+                            i {
+                                display: inline-block;
+    
+                                &.icon-facebook {}
+    
+                                &.icon-linkedin {
+                                    font-size: 22px;
+                                }
+    
+                                &.icon-youtube {
+                                    font-size: 16px;
+                                }
                             }
-                            &:hover{
-                                background-color: rgba($primary_color, 0.2);
+                        }
+                        &.hide{
+                            display: none;
+                        }
+                    }
+    
+                    .dropdown {
+                        .dropdown-menu {
+                            .nav-link {
+                                color: #3e3e3e;
+                                font-size: 14px;
+                                opacity: 1 !important;
+    
+                                >span {
+                                    padding: 0;
+                                    background: transparent !important;
+                                }
+    
+                                &:hover {
+                                    background-color: rgba($primary_color, 0.2);
+                                }
                             }
                         }
                     }
@@ -68,12 +90,12 @@
             }
         }
 
-        
     }
 
     &.scroll-active {
-        background-color: black;
-
+        @include media-breakpoint-up(lg) {
+            background-color: black;
+        }
         .navbar {
             .navbar-brand {
                 max-width: 120px;
@@ -88,6 +110,74 @@
                     .nav-link {
                         color: #b8b7b7;
                         font-size: 12px;
+                    }
+                }
+            }
+        }
+    }
+
+
+    &.show {
+        @include media-breakpoint-down(lg) {
+            height: 100%;
+            overflow: hidden;
+            .navbar {
+                top: 0;
+                left: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+                display: block;
+                position: fixed;
+                display: flex;
+                background-color: white;
+                align-items: center;
+                justify-content: center !important;
+
+                .navbar-toggler {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    z-index: 1;
+                    margin: 2rem;
+                    .navbar-toggler-icon{
+                        background: none;
+                        &::before{
+                            content: "\6c";
+                            font-size: 30px;
+                            font-family: "barreleye" !important;
+                        }
+                    }
+                    &:hover{
+                        color: $secondary_color;
+                    }
+                }
+
+                .nav-main {
+                    .menu-wrap {
+                        display: flex;
+                        padding: 1rem 0;
+                        flex-direction: column-reverse;
+                        .navbar-nav {
+                            align-items: center;
+                            flex-direction: column;
+                            .nav-link {
+                                font-size: 20px;
+                                padding: 1rem;
+                                color: $text_parah_color;
+                            }
+                            &.nav-social {
+                                flex-direction: row;
+                                justify-content: center !important;
+                                .nav-link{
+                                    font-size: 16px;
+                                    padding: 1rem;
+                                }
+                            }
+                            &.hide{
+                                display: flex;
+                            }
+                        }
                     }
                 }
             }
