--- a/assets/scss/components/_mainframe.scss
+++ b/assets/scss/components/_mainframe.scss
@@ -89,6 +89,10 @@
                 right: 0;
                 margin: 0 auto;
                 z-index: 1;
+                @include media-breakpoint-down(lg) { 
+                    width: auto !important;
+                    height: 100%;
+                }
             }
         }
     }
